--- a/lab-04.Rmd
+++ b/lab-04.Rmd
@@ -1,11 +1,15 @@
 ---
 title: "Lab 04 - La Quinta is Spanish for next to Denny's, Pt. 1"
-author: "Insert your name here"
-date: "Insert date here"
+author: "Anahatt Virk"
+date: "06/26/25"
 output: github_document
 ---
 
 ### Load packages and data
+```{r dsbox}
+install.packages("devtools", repos = "https://cloud.r-project.org")
+devtools::install_github("tidyverse/dsbox")
+```
 
 ```{r load-packages, message = FALSE}
 library(tidyverse) 
